--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
               <strong style="color: #0ff;">Duration (Months)</strong>
               <div id="infoBox13">-</div>
             </div>
-          </div>
+          </div><br></br>
               <div id="area" style="width:100%; height:300px;"></div>
       </div>
       </div>
@@ -1638,4 +1638,5 @@
 
 </body>
 </html>
+
 
