--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
         <h3 id="cameraNameBox">Digital Building</h3>
         <div class="camera-image" id="infoBox">-</div>
         <h3 id="infoBox1">-</h3>
+        <button onclick="openLogistics('BUILDING_OVERVIEW')">BUILDING OVERVIEW</button>
       </div>
       
       <div class="scrolling-wrapper">
@@ -829,6 +830,12 @@
         </div>
     </div>
     </div>
+  </div>
+  
+  <div id="BUILDING_OVERVIEW" class="glass-modal">
+    <iframe src="https://supakit148.github.io/BUILDING-OVERVIEW/"
+            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
+    <button class="close-btn" onclick="closeLogistics('BUILDING_OVERVIEW')">❌</button>
   </div>
 
   <div id="logisticsCenterModal" class="glass-modal">
@@ -1903,7 +1910,6 @@ function updateVisibility3D(){
 
 </body>
 </html>
-
 
 
 
