--- a/index.html
+++ b/index.html
@@ -651,6 +651,8 @@
           </h3>
           
           <button onclick="openLogistics('3D_Digital')">3D Digital Twin</button>
+
+          <button onclick="openLogistics('4D_Digital')">4D Digital Twin</button>
           
           <!-- Controls สำหรับเลือก Floor, System, Parameter -->
           <div class="controls" style="margin-bottom:12px;">
@@ -844,6 +846,12 @@
     <iframe src="https://supakit148.github.io/3D-Graph-Digital-Twin/"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('3D_Digital')">❌</button>
+  </div>
+  
+  <div id="4D_Digital" class="glass-modal">
+    <iframe src="https://supakit148.github.io/4D-Graph-Digital-Twin/"
+            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
+    <button class="close-btn" onclick="closeLogistics('4D_Digital')">❌</button>
   </div>
 
   <div id="logisticsCenterModal" class="glass-modal">
@@ -1918,14 +1926,6 @@ function updateVisibility3D(){
 
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
