--- a/index.html
+++ b/index.html
@@ -867,19 +867,19 @@
   </div>
 
   <div id="CCTV-WH" class="glass-modal">
-    <iframe src="https://bpstech.online/d/cbdd90cc-8519-47d1-bdd4-271ea36b2cce/building-automation-system-bas-cctv-wh?orgId=1&from=1735664400000&to=1767200399999"
+    <iframe src="https://supakit148.github.io/smart-dashboard/"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('CCTV-WH')">❌</button>
   </div>
 
   <div id="CCTV-UDS" class="glass-modal">
-    <iframe src="https://bpstech.online/d/b4678510-9285-4a64-b475-9b1f1640b61d/building-automation-system-bas-cctv-uds-rev1?orgId=1&from=1735664400000&to=1767200399999"
+    <iframe src="https://supakit148.github.io/CCTV-UDS/"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('CCTV-UDS')">❌</button>
   </div>
 
   <div id="CCTV-HQ" class="glass-modal">
-    <iframe src="https://bpstech.online/d/c5e69a05-265d-489a-a31a-3bcc1730b447/building-automation-system-bas-cctv-hq-overall?orgId=1&from=1735664400000&to=1767200399999"
+    <iframe src="https://supakit148.github.io/CCTV-HQ/"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('CCTV-HQ')">❌</button>
   </div>
@@ -1149,6 +1149,9 @@
 
   const modals = [
     'logisticsCenterModal',
+    'BUILDING_OVERVIEW',
+    '3D_Digital',
+    '4D_Digital',
     'CCTVSecurity',
     'CCTV-WH',
     'CCTV-UDS',
@@ -1162,6 +1165,9 @@
 
   const buttonMap = {
     'logisticsCenterModal': 'Logistics',
+    'BUILDING_OVERVIEW': 'BUILDING OVERVIEW',
+    '3D_Digital': '3D Digital Twin',
+    '4D_Digital': '4D Digital Twin',
     'CCTVSecurity': 'CCTV Security',
     'CCTV-WH': 'CCTV-WH',
     'CCTV-UDS': 'CCTV-UDS',
@@ -1926,6 +1932,5 @@ function updateVisibility3D(){
 
 </body>
 </html>
-
 
 
