--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      min-height: 100vh;  /* ✅ ครอบเต็ม viewport */
       width: 100%;
       overflow: hidden;
       background: #000;
@@ -30,7 +30,8 @@
 
     .layout {
       display: flex;
-      height: 100vh;
+      height: auto;
+      min-height: 100vh;   /* ✅ ไม่ fix ตายตัว แต่ขยายได้ */
       width: 100vw;
       position: relative;
     }
@@ -2014,6 +2015,7 @@ function updateVisibility3D(){
 
 </body>
 </html>
+
 
 
 
