--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
 
     .background iframe {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
@@ -2015,6 +2015,7 @@ function updateVisibility3D(){
 
 </body>
 </html>
+
 
 
 
