--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     /* === Frame ของโมดัลกล้อง === */
     .glass-modal-cctv {
       position: fixed;
-      top: 260px;
+      top: 200px;
       right: 480px;
     
       /* กรอบขนาดพอดีกับรูป */
@@ -892,6 +892,7 @@
            src=""
            alt="ภาพจากกล้อง" />
       <h3 id="infoBox1">-</h3>
+      <h3>Entry - 90Human | Exit - 90Human</h3>
       <button class="close-btn" onclick="closeLogistics('CCTV')">❌</button>
     </div>
   
@@ -2019,4 +2020,4 @@ function updateVisibility3D(){
 
 
 
-
+C
