--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
            src=""
            alt="ภาพจากกล้อง" />
       <h3 id="infoBox1">-</h3>
-      <h3>Entry - 90Human | Exit - 90Human</h3>
+      <h3>Entry - 90P | Exit - 90P</h3>
       <button class="close-btn" onclick="closeLogistics('CCTV')">❌</button>
     </div>
   
@@ -2021,3 +2021,4 @@ function updateVisibility3D(){
 
 
 C
+
