--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
         <h3 id="cameraNameBox">Digital Building</h3>
         <div class="floor-card">
           <span class="label">FLOOR</span>
-          <span class="number">2</span>
+          <span class="number" id="NumberFloor">-</span>
         </div>
         <div class="camera-image"><img id="modalImg0"></div>
         
@@ -2313,3 +2313,4 @@ function updateVisibility3D(){
 
 </body>
 </html>
+
