--- a/index.html
+++ b/index.html
@@ -732,7 +732,8 @@
     
     <!-- กล้องแนวตั้งกลาง -->
     <div class="cctv-col-center">
-      <div id="CCTV9" class="glass-card"><h32 id="name9">-</h32><img id="modalImg9"><h3 id="datetime9">-</h3></div>
+      <div id="CCTV9" class="glass-card"><h32 id="name9">-</h32><img id="modalImg9"><h3 id="datetime9">-</h3>
+      </div>
     </div>
     
     <!-- กล้องแนวตั้งฝั่งขวา -->
@@ -1807,6 +1808,7 @@
               const targetUID = ANNO_TO_MODEL[CameraName];
               if (targetUID && targetUID !== activeUID){
                 initModel(targetUID);
+                hideCenterCCTV();
               }
             });
           };
@@ -1853,6 +1855,9 @@
     function hideAll(){ 
         for(let i=1;i<=9;i++) setVisible('CCTV'+i, false); 
         for(let i=1;i<=2;i++) setVisible('cameraNameBox'+i, false); 
+    }
+    function hideCenterCCTV(){
+        setVisible('CCTV9', false);
     }
   </script>
   
