--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
     
     .cctv-col-left, .cctv-col-right, .cctv-col-center{
       position: fixed;
+      top: 25%;
       bottom: var(--safe-bottom);
       display: flex;
       flex-direction: column;
@@ -2783,4 +2784,5 @@ function updateVisibility3D(){
 
 </body>
 </html>
+
 
