--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
 /* ==== Floor switcher: ISO (ซ้าย) + chips (ขวา) ==== */
 .floor-switcher{
   position: fixed;
-  left: 50%;
+  left: 60%;
   transform: translateX(-50%);
   top: 1200%;                 /* ปรับตรงนี้ให้ทั้งกล่องอยู่ใต้ clock */
   width: min(92vw, 980px);
@@ -881,7 +881,9 @@
             <div class="stack" id="isoStack"></div>
           </div>
           <!-- ปุ่ม (มี BPS) -->
-          <div class="chips" id="isoChips"></div>
+          <div class="card">
+            <div class="chips" id="isoChips"></div>
+        </div>
         </div>
 
 
