--- a/index.html
+++ b/index.html
@@ -773,9 +773,9 @@
 /* ==== Floor switcher: ISO (ซ้าย) + chips (ขวา) ==== */
 .floor-switcher{
   position: fixed;
-  left: 60%;
+  left: 50%;
   transform: translateX(-50%);
-  top: 1200%;                 /* ปรับตรงนี้ให้ทั้งกล่องอยู่ใต้ clock */
+  top: 800%;                 /* ปรับตรงนี้ให้ทั้งกล่องอยู่ใต้ clock */
   width: min(92vw, 980px);
   z-index: 10002;
 
@@ -882,10 +882,10 @@
           </div>
           <!-- ปุ่ม (มี BPS) -->
           <div class="card">
+            <h3>Select Floor</h3>
             <div class="chips" id="isoChips"></div>
         </div>
         </div>
-
 
       </div>
     </div>
