--- a/index.html
+++ b/index.html
@@ -773,9 +773,9 @@
 /* ==== Floor switcher: ISO (ซ้าย) + chips (ขวา) ==== */
 .floor-switcher{
   position: fixed;
-  left: 35%;
+  left: 50%;
   transform: translateX(-50%);
-  top: 1100%;                 /* ปรับตรงนี้ให้ทั้งกล่องอยู่ใต้ clock */
+  top: 1000%;                 /* ปรับตรงนี้ให้ทั้งกล่องอยู่ใต้ clock */
   width: min(92vw, 980px);
   z-index: 10002;
 
@@ -808,7 +808,15 @@
   pointer-events: auto;
 }
 
+/* ซ่อนคอลัมน์ CCTV ตอนโหลดครั้งแรก */
+.cctv-col-left,
+.cctv-col-center,
+.cctv-col-right { display: none; }
 
+/* โชว์เมื่อ body มีคลาสนี้ */
+body.show-cctv .cctv-col-left,
+body.show-cctv .cctv-col-center,
+body.show-cctv .cctv-col-right { display: flex; }
     
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
@@ -2801,9 +2809,6 @@ function updateVisibility3D(){
 
 </body>
 </html>
-
-
-
 
 
 
