--- a/index.html
+++ b/index.html
@@ -21,25 +21,20 @@
       --safe-bottom: calc(4vh + 36px); /* เว้นปุ่ม control Sketchfab *
     }
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;  /* ✅ ครอบเต็ม viewport */
-      width: 100%;
-      overflow: hidden;
-      background: #000;
-      font-family: 'Orbitron', sans-serif;
-      font-variant-numeric: tabular-nums; /* ✅ เพิ่มบรรทัดนี้ */
-      color: var(--text);
-    }
-
-    .layout {
-      display: flex;
-      height: auto;
-      min-height: 100vh;   /* ✅ ไม่ fix ตายตัว แต่ขยายได้ */
-      width: 100vw;
-      position: relative;
-    }
+      /* ➊ อนุญาตให้หน้าเลื่อนได้ตามเนื้อหา */
+      html, body {
+        min-height: 100%;
+        height: auto;
+        overflow-x: hidden;
+        overflow-y: auto;   /* เดิม hidden */
+      }
+      
+      /* ➋ layout ไม่บังคับสูงเท่า viewport */
+      .layout {
+        display: block;     /* เดิมเป็น flex ไม่จำเป็นแล้ว */
+        height: auto;
+        min-height: 100%;
+      }
 
     .background iframe {
       position: fixed;
@@ -2828,3 +2823,4 @@ function renderFloorMapFromSheet(floorKey, activeName){
 
 </body>
 </html>
+
