--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         height: auto;
         overflow-x: hidden;
         overflow-y: auto;   /* เดิม hidden */
+        font-family: 'Orbitron', sans-serif;
+        font-variant-numeric: tabular-nums; /* ✅ เพิ่มบรรทัดนี้ */
       }
       
       /* ➋ layout ไม่บังคับสูงเท่า viewport */
@@ -2823,4 +2825,5 @@ function renderFloorMapFromSheet(floorKey, activeName){
 
 </body>
 </html>
+
 
