--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,22 +22,25 @@
       --safe-bottom: calc(4vh + 36px); /* เว้นปุ่ม control Sketchfab *
     }
 
-      /* ➊ อนุญาตให้หน้าเลื่อนได้ตามเนื้อหา */
-      html, body {
-        min-height: 100%;
-        height: auto;
-        overflow-x: hidden;
-        overflow-y: auto;   /* เดิม hidden */
-        font-family: 'Orbitron', sans-serif;
-        font-variant-numeric: tabular-nums; /* ✅ เพิ่มบรรทัดนี้ */
-      }
-      
-      /* ➋ layout ไม่บังคับสูงเท่า viewport */
-      .layout {
-        display: block;     /* เดิมเป็น flex ไม่จำเป็นแล้ว */
-        height: auto;
-        min-height: 100%;
-      }
+    html, body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;  /* ✅ ครอบเต็ม viewport */
+      width: 100%;
+      overflow: hidden;
+      background: #000;
+      font-family: 'Orbitron', sans-serif;
+      font-variant-numeric: tabular-nums; /* ✅ เพิ่มบรรทัดนี้ */
+      color: var(--text);
+    }
+
+    .layout {
+      display: flex;
+      height: auto;
+      min-height: 100vh;   /* ✅ ไม่ fix ตายตัว แต่ขยายได้ */
+      width: 100vw;
+      position: relative;
+    }
 
     .background iframe {
       position: fixed;
@@ -2825,5 +2829,3 @@ function renderFloorMapFromSheet(floorKey, activeName){
 
 </body>
 </html>
-
-
