--- a/index.html
+++ b/index.html
@@ -1600,34 +1600,18 @@ body.modal-open {
 
   const modals = [
     'logisticsCenterModal',
-    'BUILDING_OVERVIEW',
-    '3D_Digital',
-    '4D_Digital',
-    'CCTVSecurity',
     'CCTV-WH',
     'CCTV-UDS',
     'CCTV-HQ',
-    'ElectricalSystem',
-    'WaterSystem',
-    'FreshAir',
-    'SolarCell',
-    'FiberOptic'
+    'SolarCell'
   ];
 
   const buttonMap = {
     'logisticsCenterModal': 'Logistics',
-    'BUILDING_OVERVIEW': 'BUILDING OVERVIEW',
-    '3D_Digital': '3D Digital Twin',
-    '4D_Digital': '4D Digital Twin',
-    'CCTVSecurity': 'CCTV Security',
     'CCTV-WH': 'CCTV-WH',
     'CCTV-UDS': 'CCTV-UDS',
     'CCTV-HQ': 'CCTV-HQ',
-    'ElectricalSystem': 'Electrical System',
-    'WaterSystem': 'Water System',
-    'FreshAir': 'Fresh Air',
-    'SolarCell': 'Solar Cell',
-    'FiberOptic': 'Fiber Optic'
+    'SolarCell': 'Solar Cell'
   };
 
   function closeAllModals() {
