--- a/index.html
+++ b/index.html
@@ -369,8 +369,9 @@
       left: 51.5%;
       transform: translateX(-50%);
       width: 90vw;                /* กว้างเท่าเดิม */
-      max-width: 1280px;
+      max-width: 1910px;
       height: 82vh;               /* ✅ เพิ่มความสูงมากขึ้น */
+      max-height: 1095px;
       background: rgba(0, 0, 0, 0.65);
       backdrop-filter: blur(20px);
       border-radius: 16px;
