--- a/index.html
+++ b/index.html
@@ -1180,6 +1180,45 @@ body.modal-open {
   transform: none !important;
 }
 
+/* === Neon Blue Water — Compact Version === */
+#waterWidget {
+  position: relative;
+  width: 100%;
+  height: 90px;                 /* ลดสูงสุด ให้ widget แคบลง */
+  border-radius: 12px;
+  overflow: hidden;
+  background:
+    radial-gradient(400px 150px at 78% 18%, rgba(0,234,255,.18), transparent 60%), /* ลด radial gradient */
+    linear-gradient(180deg, var(--bg1) 0%, var(--bg2) 100%);
+  box-shadow: inset 0 0 8px rgba(0,234,255,.12);
+}
+
+/* ชั้นน้ำ absolute ภายใน widget */
+#waterWidget .water { position: absolute; inset:0; pointer-events:none; }
+#waterWidget .pane svg { width:200%; height:100%; display:block; will-change:transform; }
+
+/* ลด glow ด้านบน */
+#waterWidget .glow {
+  height: 25px;  /* แคบลงจาก 72px → 25px */
+  background: radial-gradient(100% 110% at 50% 100%, rgba(0,234,255,.18), transparent 70%);
+  mix-blend-mode: screen;
+}
+
+/* ปรับ crest ให้สูงขึ้น (ลดพื้นที่บน) */
+#waterWidget .crest {
+  bottom: calc(70% - 1px); /* แคบขึ้นจาก 60% → 70% */
+  height: 2px;              /* ลดเส้นสันคลื่นเล็กน้อย */
+  background: linear-gradient(90deg, transparent, rgba(191,247,255,.8), transparent);
+  filter: drop-shadow(0 0 8px rgba(191,247,255,.45));
+  opacity: .35;
+}
+
+/* คลื่นเคลื่อนไหวยังคงเดิม */
+#waterWidget .d1 { animation: nw-drift1 9s linear infinite; }
+#waterWidget .d2 { animation: nw-drift2 13s linear infinite; }
+#waterWidget .d3 { animation: nw-drift3 20s linear infinite; }
+
+
 
   </style>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
