--- a/index.html
+++ b/index.html
@@ -1894,7 +1894,7 @@ body.modal-open {
   </div>
 
   <div id="FreshAir" class="glass-modal">
-    <iframe src="https://bpstech.online/d/e292748b-da2c-4d29-9990-0262a6cd519e/air-q-demo-rev0?orgId=1&refresh=5s&from=1752551302736&to=1752553102736"
+    <iframe src="https://bpstech.online/d/e292748b-da2c-4d29-9990-0262a6cd519e/air-q-demo-rev0?orgId=1&refresh=5s&from=now-1h&to=now"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('FreshAir')">❌</button>
   </div>
@@ -1906,11 +1906,12 @@ body.modal-open {
   </div>
 
   <div id="FiberOptic" class="glass-modal">
-    <iframe src="https://bpstech.online/d/fe15b960-5bda-4051-b87b-2bbec6d29461/project-fiber-check-material-rev1?orgId=1&from=1753376400000&to=1753416393714"
+    <iframe src="https://www.hik-connect.com/views/login/index.html#/portal"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
     <button class="close-btn" onclick="closeLogistics('FiberOptic')">❌</button>
   </div>
 
+  <!-- https://bpstech.online/d/fe15b960-5bda-4051-b87b-2bbec6d29461/project-fiber-check-material-rev1?orgId=1&from=1753376400000&to=1753416393714
   <!-- 🔊 Audio Visualizer -->
   <div class="audio-bars-container">
     <div class="bars" id="audioBars"></div>
@@ -3654,7 +3655,6 @@ checkAlarmAndFocus();
 
 </body>
 </html>
-
 
 
 
