--- a/index.html
+++ b/index.html
@@ -1316,6 +1316,7 @@ body.modal-open {
           <button onclick="openLogistics('FreshAir')">Fresh Air</button>
           <button onclick="openLogistics('SolarCell')">Solar Cell</button>
           <button onclick="openLogistics('FiberOptic')">Fiber Optic</button>
+          <button onclick="openLogistics('Hik-Connect')">Hik-Connect</button>
         </div>
 
       <!-- ใต้ .top-center -->
@@ -1906,9 +1907,21 @@ body.modal-open {
   </div>
 
   <div id="FiberOptic" class="glass-modal">
-    <iframe src="https://www.hik-connect.com/views/login/index.html#/portal"
+      <a href="https://bpstech.online/d/fe15b960-5bda-4051-b87b-2bbec6d29461/project-fiber-check-material-rev1?orgId=1&from=1753376400000&to=1753416393714" target="_blank" style="font-size:18px; text-decoration:none;">
+    🌐 เปิด FiberOptic
+    <iframe src="https://lh3.googleusercontent.com/d/1LxJs-uOIxA41taRQ6FRO4Nhlw4hkRlTJ"
             style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
+            </a>
     <button class="close-btn" onclick="closeLogistics('FiberOptic')">❌</button>
+  </div>
+  
+  <div id="Hik-Connect" class="glass-modal">
+      <a href="https://www.hik-connect.com/views/login/index.html#/portal" target="_blank" style="font-size:18px; text-decoration:none;">
+    🌐 เปิด Hik-Connect Portal      
+    <iframe src="https://lh3.googleusercontent.com/d/1HaZxGvMWF-H2eMs1PP5Bf3Sh-9vtP2X3"
+            style="width:100%; height:100%; border:none; border-radius: 16px;"></iframe>
+            </a>
+    <button class="close-btn" onclick="closeLogistics('Hik-Connect')">❌</button>
   </div>
 
   <!-- https://bpstech.online/d/fe15b960-5bda-4051-b87b-2bbec6d29461/project-fiber-check-material-rev1?orgId=1&from=1753376400000&to=1753416393714
@@ -3655,6 +3668,5 @@ checkAlarmAndFocus();
 
 </body>
 </html>
-
 
 
