--- a/index.html
+++ b/index.html
@@ -2511,7 +2511,8 @@ body.modal-open {
     
 
   // === CONFIG: Mapping annotation name → model UID =========================
-  const MODEL_START = '6a3d574afb3b447986604c9ab478ac12'; // โมเดลรวมเริ่มต้น
+  const MODEL_START = '2ad3a8196b044923b2cfdf5634595866'; // โมเดลรวมเริ่มต้น
+  //สำรอง 6a3d574afb3b447986604c9ab478ac12
   //สำรอง 7adcd28260174cf58dd2672e1e189426
   const ANNO_TO_MODEL = {
     '1st_Floor' : '78c790b7e74843139138cac1d852f05d',
@@ -3694,3 +3695,4 @@ checkAlarmAndFocus();
 
 </body>
 </html>
+
